# package

./: README.md
david_cointegration_package/: CHANGELOG.md  CONTRIBUTING.md  pyproject.toml
david_cointegration_package/blockchain/: my_backtest.pkl
david_cointegration_package/docs/: Makefile  example.ipynb
david_cointegration_package/src/python_class/: Backtest.py
python_class/: CHANGELOG.md  pyproject.toml
python_class/docs/: conf.py  make.bat
python_class/myenv/: pyvenv.cfg
python_class/src/python_class/: Backtest.py  Cointegration.py  Test.py
python_class/tests/: test_python_class.py
