[tool.poetry]
name = "python_class"
version = "0.0.0"
description = "A package for 203 python class"
authors = ["David Verelst"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.9"
numpy = "^2.2.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
