[tool.poetry]
name = "python_class"
version = "0.1.0"
description = "A package for 203 python class"
authors = ["David Verelst"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
